# ffff-dnsp2p

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ROADMAP  SConstruct  admin.c  admin.h  common.mak  crypto.c  crypto.h  dns.c  dns.h  ffff.c  ffff.h  libevent-2.0.9_rc-1_amd64.deb  op_get.c  op_get.h  ops.c  ops.h  properties.c  properties.h  rbtree.h  stub.c
dht/: CMakeLists.txt  SConscript  dht-example.c  dht.c  dht.h
libbenc/: CMakeLists.txt  SConscript  benc.h  benc_bstr.c  benc_dict.c  benc_int.c  benc_list.c  bencode.c  bencode.h  make.py
seccure/: CMakeLists.txt  Makefile  SConscript  curves.c  curves.h  protocol.c  seccure.c  serialize.c  serialize.h
test/: CMakeLists.txt  Makefile  dns_test.c  f4_test.c  test_framework.c  test_framework.h
